Add solution for Day 3
This also does some general formatting & cleanup as well as Java 21
refactoring (yay jdt.ls v1.30!).